--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /* FONTS */
-    @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Kanit&family=Material+Symbols+Outlined&display=swap');
 
 
 /* RESETS */
@@ -17,7 +17,6 @@
     }
     body {
         font-size: 1.5rem;
-        font-family: var(--ff-main);
     }
     img {
         display: block; /* remove gap between div containers */
@@ -51,13 +50,26 @@
         --spc-lg: 5rem;
 
         /* font family */
-        --ff-main: 'Josefin Sans', sans-serif;
+        --ff-body: sans-serif;
+        --ff-heading: 'ADLaM Display', serif;
+        --ff-timer: 'Kanit', sans-serif;
+
+        /* font size */
+        --fs-h1: 4rem;
+        --fs-body: 1.5rem;
+        --fs-counter: 9rem;
+
+        /* colors */
+        --clr-light: #E8E8E8;
+        --clr-dark: #212121;
     }
 
 
 /* HEADER CONTAINER */
     header {
         margin-top: var(--spc-md);
+        font-family: var(--ff-heading);
+        font-size: var(--fs-h1);
     }
 
     h1 {
@@ -66,13 +78,15 @@
 
 /* MAIN CONTAINER */
     main {
-        width: 100vw;
+        max-width: 100vw;
         margin-top: var(--spc-lg);
+        font-size: var(--fs-body);
+        color: var(--clr-dark);
     }
 
     /* img container for top, middle, and bottom section of timer character */
     .timer-img-container {
-        max-width: 600px;
+        max-width: calc(var(--avo-width) * 1px);
         display: flex;
         flex-direction: column;
         margin: auto;
@@ -91,7 +105,6 @@
     /* middle img div */
     .timer-img-mid {
         display: flex;
-        height: var(--height-mid);
     }
 
     /* middle img div - left section */
@@ -100,7 +113,16 @@
     }
     /* middle img div - middle section / timer display */
     .timer-img-mid-mid {
+        background: var(--clr-light);
         width: var(--width-mid-mid);
+        font-family: var(--ff-timer);
+        font-size: var(--fs-counter);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        line-height: 0; /* prevent timer-display div from breaking layout */
+        min-height: 0;
+        overflow: hidden;
     }
     /* middle img div - right section */
     .timer-img-mid-right {
@@ -110,4 +132,24 @@
     /* bottom img div */
     .timer-img-bottom {
         height: var(--height-bottom);
+    }
+
+    /* timer display */
+    .timer-display {
+        max-height: 0;
+        font-size: var(--fs-counter);
+
+    }
+
+    /* timer control container */
+    .timer-control-container {
+        margin-top: var(--spc-md);
+        display: flex;
+        justify-content: center;
+    }
+    .timer-control-container button {
+        
+    }
+    .timer-control-container span {
+        font-size: var(--fs-counter);
     }
